[B]Version 1.1.3[/B] 2014-06-30
- Update Strings to strings.po
- Added UnitTests
- Added option to list show by categories via context menu
- Change isHD Flag to be more accurate
- Fix Addon after site changes
- And a lot more small improvements

[B]Version 1.1.2[/B]
- Added Full Unicode Support

[B]Version 1.1.1[/B]
- Changed icon.png (Thanks goes to moneymaker for the new image)

[B]Version 1.1.0[/B]
- Rebuild content scraper after site totally changed

[B]Version 1.0.0[/B]
- Initial Version