@@ -1,3 +1,6 @@
+[B]Version 1.1.4[/B] 2014-08-7
+- Fix addon after site changes
+
 [B]Version 1.1.3[/B] 2014-06-30
 - Update Strings to strings.po
 - Added UnitTests
